sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: type mismatch;
 found   : Boolean(true)
 required: Int
			 trie=true    
                              ^AlgBubbleSort3:13: error: value unary_! is not a member of Int
    if (!trie){
        ^